# neural-style

./: .gitignore  .travis.yml  Dockerfile  README.md  batch.py  create_comparison_images.py  neural_style.py  pyproject.toml  requirements.txt  stylize.py  vgg.py  video
.github/workflows/: build.yml  ci.yml
.ipynb_checkpoints/: view_images-checkpoint.ipynb
neural_style_demo/: .gitignore  README.md  losses.py  main_demo.py  neural_style.py  run_in_colab_of_google.md  stylize.py
neural_style_demo/examples/: .gitignore
neural_style_demo/nets/: alexnet_test.py  inception.py  inception_resnet_v2_test.py  inception_v1.py  inception_v1_test.py  inception_v2.py  inception_v2_test.py  inception_v3.py  inception_v3_test.py  inception_v4.py  inception_v4_test.py  nets_factory.py  nets_factory_test.py  overfeat_test.py  resnet_v1.py  resnet_v1_test.py  resnet_v2.py  resnet_v2_test.py  vgg.py  vgg_test.py
neural_style_demo/preprocessing/: preprocessing_factory.py  vgg_preprocessing.py
